# haptic-device

./: .gitignore  CMakeLists.txt  LJ.cpp  Makefile  Makefile.project  POSCAR  ase_file_io.py  atom.cpp  atom.h  boundaryConditions.cpp  bugs.md  calculator.py  customHapticDevice.cpp  customHapticDevice.h  globals.h  hapticDeviceSerial.cpp  hapticDeviceSerial.h  inputHandling.cpp  ipcServer.cpp  potentials.cpp  potentials.h  protocol.h  server.py  slider.cpp  slider.h  utility.cpp  utility.h
firmware/haptic_motor_controller/: haptic_motor_controller.ino
launcher/: ipc_client.py  main.py
performance_tests/: ase_test.py
tools/: chai3d_device_test.cpp  chai3d_visualizer.cpp  haptic_serial_test.cpp
